[gd_scene load_steps=3 format=3 uid="uid://bmvdlpl6dm2ex"]

[ext_resource type="Script" path="res://french_dico.gd" id="1_gu4hq"]

[sub_resource type="Theme" id="Theme_4j0jd"]
Button/font_sizes/font_size = 16
Label/font_sizes/font_size = 18

[node name="FrenchDico" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_4j0jd")
script = ExtResource("1_gu4hq")

[node name="MainContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="TabContainer" type="TabContainer" parent="MainContainer"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tab_alignment = 1

[node name="Ajouter" type="VBoxContainer" parent="MainContainer/TabContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/TabContainer/Ajouter"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/TabContainer/Ajouter/VBoxContainer"]
layout_mode = 2
text = "Ajouter un nouveau mot :"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="MainContainer/TabContainer/Ajouter/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
columns = 2

[node name="Label" type="Label" parent="MainContainer/TabContainer/Ajouter/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Mot en français :"

[node name="FrenchInput" type="LineEdit" parent="MainContainer/TabContainer/Ajouter/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 30)
layout_mode = 2

[node name="Label2" type="Label" parent="MainContainer/TabContainer/Ajouter/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Mot en portugais :"

[node name="$PortugueseInput" type="LineEdit" parent="MainContainer/TabContainer/Ajouter/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 30)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MainContainer/TabContainer/Ajouter/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Control" type="Control" parent="MainContainer/TabContainer/Ajouter/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="AddButton" type="Button" parent="MainContainer/TabContainer/Ajouter/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "ajouter
"

[node name="LabelAddStatus" type="Label" parent="MainContainer/TabContainer/Ajouter/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Rechercher" type="VBoxContainer" parent="MainContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="LabelSearch" type="Label" parent="MainContainer/TabContainer/Rechercher"]
layout_mode = 2
text = "Rechercher un mot :"

[node name="HBoxContainer2" type="HBoxContainer" parent="MainContainer/TabContainer/Rechercher"]
layout_mode = 2

[node name="SearchInput" type="LineEdit" parent="MainContainer/TabContainer/Rechercher/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 30)
layout_mode = 2

[node name="SearchButton" type="Button" parent="MainContainer/TabContainer/Rechercher/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "rechercher"

[node name="SearchResults" type="RichTextLabel" parent="MainContainer/TabContainer/Rechercher"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="MainContainer/TabContainer/Rechercher"]
layout_mode = 2

[node name="ShowAllButton" type="Button" parent="MainContainer/TabContainer/Rechercher"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "liste"

[node name="ResultLabel" type="Label" parent="MainContainer/TabContainer/Rechercher"]
unique_name_in_owner = true
layout_mode = 2

[node name="Gérer" type="VBoxContainer" parent="MainContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="LabelList" type="Label" parent="MainContainer/TabContainer/Gérer"]
layout_mode = 2
text = "Gérer le dictionnaire :"

[node name="ButtonExport" type="Button" parent="MainContainer/TabContainer/Gérer"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "Exporter en CSV"

[node name="ButtonImport" type="Button" parent="MainContainer/TabContainer/Gérer"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "Importer depuis un CSV"

[node name="HSeparator" type="HSeparator" parent="MainContainer/TabContainer/Gérer"]
layout_mode = 2

[node name="DeleteButton" type="Button" parent="MainContainer/TabContainer/Gérer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "supprimer un mot
"

[node name="DeleteInput" type="LineEdit" parent="MainContainer/TabContainer/Gérer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 30)
layout_mode = 2

[node name="LabelDeleteStatus" type="Label" parent="MainContainer/TabContainer/Gérer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Liste" type="VBoxContainer" parent="MainContainer/TabContainer"]
visible = false
clip_contents = true
layout_mode = 2
alignment = 1

[node name="LabelList" type="Label" parent="MainContainer/TabContainer/Liste"]
layout_mode = 2
text = "Liste des mots :"

[node name="TreeWordList" type="Tree" parent="MainContainer/TabContainer/Liste"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
columns = 2
